@@ -10,6 +10,7 @@ Device specific changes/fixes
 	* JetiAdapter - fix check GPS data to enable Google Earth export
 	* IGCAdapter - fix support configuring speed or others in KML/KMZ export
 	* HoTTAdapter* - fix unit of GPS vibration
+	* HoTTAdapter* - detecting GPS type to sort and name values
 	* GraupnerUDP* - fix update step charge tabulator
 	* GraupnerUDP* - fix update step charge min capacity/current
 
